@startuml

title __SURVIVAL2D's Class Diagram__\n

  namespace survival2d {
    class survival2d.Survival2DStartup {
        {static} + APP_NAME : String
        {static} + NODE_NAME : String
        {static} + PACKAGE_NAME : String
        {static} + PLUGIN_NAME : String
        {static} + ZONE_NAME : String
        {static} - log : Logger
        {static} - serverContext : EzyServerContext
        {static} + getServerContext()
        {static} + main()
    }
  }
  

  namespace survival2d {
    class survival2d.Survival2DStartup.Survival2dAppEntry {
        # getScanableBeanPackages()
        # getScanableBindingPackages()
        # setupBeanContext()
    }
  }
  

  namespace survival2d {
    class survival2d.Survival2DStartup.Survival2dAppEntryLoader {
        + load()
    }
  }
  

  namespace survival2d {
    class survival2d.Survival2DStartup.Survival2dPluginEntry {
        # getScanableBeanPackages()
        # getScanableBindingPackages()
        # setupBeanContext()
    }
  }
  

  namespace survival2d {
    class survival2d.Survival2DStartup.Survival2dPluginEntryLoader {
        + load()
    }
  }
  

  survival2d.Survival2DStartup +-down- survival2d.Survival2DStartup.Survival2dAppEntry
  survival2d.Survival2DStartup +-down- survival2d.Survival2DStartup.Survival2dAppEntryLoader
  survival2d.Survival2DStartup +-down- survival2d.Survival2DStartup.Survival2dPluginEntry
  survival2d.Survival2DStartup +-down- survival2d.Survival2DStartup.Survival2dPluginEntryLoader
  survival2d.Survival2DStartup.Survival2dAppEntry -up-|> com.tvd12.ezyfoxserver.support.entry.EzySimpleAppEntry
  survival2d.Survival2DStartup.Survival2dAppEntryLoader -up-|> com.tvd12.ezyfoxserver.ext.EzyAbstractAppEntryLoader
  survival2d.Survival2DStartup.Survival2dPluginEntry -up-|> com.tvd12.ezyfoxserver.support.entry.EzySimplePluginEntry
  survival2d.Survival2DStartup.Survival2dPluginEntryLoader -up-|> com.tvd12.ezyfoxserver.ext.EzyAbstractPluginEntryLoader


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
